--- a/index.html
+++ b/index.html
@@ -3,151 +3,93 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Y.KURODA｜Kick型｜adjustment-lab</title>
+<title>チームトレーニング2025｜adjustment-lab</title>
 <style>
-  body {
-    background: #0d1117;
-    color: #e5e7eb;
-    font-family: 'Noto Sans JP', sans-serif;
-    margin: 0;
-    padding: 40px 20px 80px;
-    line-height: 1.8;
-  }
-  header {
-    text-align: center;
-    border-bottom: 1px solid #1f2937;
-    margin-bottom: 30px;
-    padding-bottom: 15px;
-  }
-  h1 {
-    color: #3b82f6;
-    font-size: 1.8rem;
-    letter-spacing: 0.05em;
-  }
-  h2 {
-    color: #93c5fd;
-    margin-top: 40px;
-    border-left: 4px solid #3b82f6;
-    padding-left: 10px;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    background: #111827;
-    margin-top: 15px;
-  }
-  th, td {
-    border: 1px solid #1f2937;
-    padding: 10px;
-    text-align: center;
-  }
-  th {
-    background: #1e3a8a;
-    color: #f1f5f9;
-  }
-  section {
-    margin-top: 25px;
-  }
-  .note {
-    border: 1px solid #374151;
-    background: #111827;
-    padding: 15px;
-    margin-top: 15px;
-  }
-  .btn-back {
-    display: block;
-    text-align: center;
-    margin-top: 60px;
-  }
-  .btn-back a {
-    background: #3b82f6;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 6px;
-    text-decoration: none;
-  }
-  .btn-back a:hover {
-    background: #2563eb;
-  }
+  body{background:#0d1117;color:#e5e7eb;font-family:'Noto Sans JP',sans-serif;margin:0;padding:40px 20px 80px;line-height:1.8;}
+  header{text-align:center;border-bottom:1px solid #1f2937;margin-bottom:30px;padding-bottom:15px;}
+  h1{color:#60a5fa;font-size:1.8rem;letter-spacing:0.05em;}
+  h2{color:#93c5fd;margin-top:40px;border-left:4px solid #60a5fa;padding-left:10px;}
+  table{width:100%;border-collapse:collapse;background:#111827;margin-top:15px;}
+  th,td{border:1px solid #1f2937;padding:10px;text-align:center;}
+  th{background:#1e3a8a;color:#f1f5f9;}
+  .player-links{display:flex;flex-wrap:wrap;gap:10px;justify-content:center;margin-top:20px;}
+  .player-links a{display:inline-block;color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;}
+  .k{background:#3b82f6;} .k:hover{background:#2563eb;}
+  .t{background:#ef4444;} .t:hover{background:#b91c1c;}
+  .m{background:#22c55e;} .m:hover{background:#15803d;}
+  .f{background:#facc15;color:#000;} .f:hover{background:#eab308;}
+  section{margin-top:25px;}
+  footer{text-align:center;margin-top:60px;color:#9ca3af;}
 </style>
 </head>
 <body>
 
 <header>
-  <h1>Y. KURODA｜Kick型</h1>
-  <p>出力不足 × 持久弱化タイプ</p>
+  <h1>チームトレーニング2025｜adjustment-lab</h1>
+  <p>テーマ：持久系と出力系のバランスを整える ― 「呼吸 × 出力 × 流れ」</p>
 </header>
 
-<section id="data">
-  <h2>測定結果</h2>
+<section id="summary">
+  <h2>チーム全体の傾向</h2>
+  <p>4投手とも基礎的な走力と出力は中〜高水準。<br>
+     ただし全体的に“中強度でまとめる傾向”があり、<strong>瞬発局面での呼吸と出力の同期</strong>に課題が見られる。<br>
+     この冬は、<strong>呼吸で動きを導く</strong>ことと、<strong>骨盤を主導にした出力連鎖</strong>を再教育していく。</p>
+</section>
+
+<section id="program">
+  <h2>4週間共通プログラム（週2回×120分）</h2>
   <table>
-    <tr><th>クーパー走</th><th>MB(back)</th><th>右回旋</th><th>左回旋</th><th>30mスプリント</th></tr>
-    <tr><td>2375 m</td><td>17.0 m</td><td>14.1 m</td><td>13.5 m</td><td>3.97 s</td></tr>
+    <tr><th>週</th><th>テーマ</th><th>主目的</th><th>メイン内容</th></tr>
+    <tr>
+      <td>WEEK1</td>
+      <td>呼吸と出力の同期</td>
+      <td>呼吸リズムの再教育</td>
+      <td>LSD走・MB基礎スロー・テンポラン</td>
+    </tr>
+    <tr>
+      <td>WEEK2</td>
+      <td>骨盤主導の加速</td>
+      <td>初速と反応速度の強化</td>
+      <td>坂道ダッシュ・自走式TM・MB回旋</td>
+    </tr>
+    <tr>
+      <td>WEEK3</td>
+      <td>滑走と持久</td>
+      <td>酸素利用効率と動作持久力</td>
+      <td>クーパー走変法・MB連続スロー</td>
+    </tr>
+    <tr>
+      <td>WEEK4</td>
+      <td>調整と統合</td>
+      <td>出力・呼吸・反応の統合</td>
+      <td>トレッドミル短距離＋ペアMBスロー</td>
+    </tr>
   </table>
 </section>
 
-<section id="feedback">
-  <h2>フィードバック</h2>
-  <h3>良い特徴</h3>
-  <p>・動作の方向性が安定しており、力を真っ直ぐ前へ伝えられる。<br>
-     ・出力フォームが乱れにくく、スプリント中も軸がぶれない。<br>
-     ・重心の通り道が明確で、上半身の力みに左右されにくい。</p>
-
-  <h3>課題（直球）</h3>
-  <p>力を出す瞬間に息を止めてしまい、身体の動きが内側で詰まっている。<br>
-     本来は「吸いながら骨盤を前に滑らせる→吐きながら押し出す」流れで、力が全身を通る。<br>
-     今は呼吸が止まることで胸と骨盤の動きが切れ、力が脚で止まっている。<br>
-     呼吸を“動きのリズム”として使えるようになることが最優先。</p>
-
-  <div class="note">
-    <strong>コーチコメント：</strong><br>
-    呼吸を通せるようになれば、スプリントも投球も“流れのある出力”に変わる。<br>
-    力むな、詰まるな。息で動きを解放しろ。
+<section id="players">
+  <h2>個別プログラム（選手別ページ）</h2>
+  <div class="player-links">
+    <a href="k.html" class="k">Y. KURODA｜Kick型</a>
+    <a href="t.html" class="t">Y. TATSUMURA｜Torque型</a>
+    <a href="m.html" class="m">Y. MIYAKE｜Multi型</a>
+    <a href="f.html" class="f">R. FUJIWARA｜Flow型</a>
   </div>
+  <p style="text-align:center;margin-top:20px;color:#9ca3af;">各リンクから個別の測定結果・フィードバック・トレーニング内容を閲覧可能。</p>
 </section>
 
-<section id="menu">
-  <h2>個別トレーニングメニュー</h2>
-
-  <h3>① ランジスタートスプリント（10m）</h3>
-  <p><strong>目的：</strong> 初動時の骨盤前傾と股関節内旋反応を養う。<br>
-     <strong>フォーム：</strong> 前脚90°・後脚膝下垂。合図で股関節を内旋→地面を“引く”ように加速。<br>
-     <strong>キュー：</strong> 「押す」ではなく「引く」。骨盤を前へ滑らせる。<br>
-     <strong>強度：</strong> 5本×3セット／休息60秒。</p>
-
-  <h3>② MBリフトスロー（3kg）</h3>
-  <p><strong>目的：</strong> 地面反力→骨盤→胸郭の縦連動を養う。<br>
-     <strong>フォーム：</strong> 股関節屈曲位から一気に伸展して天井へリリース。<br>
-     <strong>キュー：</strong> 「地面を押して身体を通す」。<br>
-     <strong>強度：</strong> 6回×2セット／休息90秒。</p>
-
-  <h3>③ スプリットホップキャッチ</h3>
-  <p><strong>目的：</strong> 着地剛性と骨盤安定の強化。<br>
-     <strong>フォーム：</strong> 片脚前・片脚後の姿勢から軽くジャンプ→静止。<br>
-     <strong>キュー：</strong> 「沈まず止まる」。<br>
-     <strong>強度：</strong> 8回×2セット／休息60秒。</p>
-
-  <h3>④ テンポラン（200m×4）</h3>
-  <p><strong>目的：</strong> 呼吸リズムと心拍の安定。<br>
-     <strong>キュー：</strong> 「呼吸は鼻2拍→口2拍」<br>
-     <strong>強度：</strong> HR140〜150／インターバル90秒。</p>
-
-  <h3>⑤ ディープブリージング＋カーフリリース</h3>
-  <p><strong>目的：</strong> 呼吸筋のリセットと下腿の循環改善。<br>
-     <strong>方法：</strong> 仰向けで鼻吸・口吐を5秒ずつ。ローラーで腓腹筋〜ヒラメ筋を緩める。</p>
+<section id="notes">
+  <h2>実施メモ</h2>
+  <p>・各セッションは「ウォームアップ→メイン→クールダウン」の流れで統一。<br>
+     ・共通メニューのあとに個別補強を20〜30分実施。<br>
+     ・トレッドミルは電動式＝フォーム確認、自走式＝出力評価として使い分ける。<br>
+     ・疲労指標は心拍・主観RPE・呼吸回数でモニタリング。<br>
+     ・目的は“限界で頑張る”ではなく、“力を通す準備を整える”。</p>
 </section>
 
-<section id="coach-note">
-  <h2>コーチメモ</h2>
-  <p>・トレーニング後の呼吸回復速度をモニタリング。<br>
-     ・息を通したまま加速できているかを動画で確認。<br>
-     ・Kurodaの課題は“リズムと流れ”を取り戻すこと。<br>
-     ・詰める動作ではなく、解放の中で出力する意識を持たせる。</p>
-</section>
-
-<div class="btn-back">
-  <a href="index.html">← チーム共通ページへ戻る</a>
-</div>
+<footer>
+  <p>© 2025 adjustment-lab | Design & Concept by H. Nishimoto</p>
+</footer>
 
 </body>
 </html>
