--- a/k.html
+++ b/k.html
@@ -6,7 +6,7 @@
 <title>Y.KURODA｜Kick型｜adjustment-lab</title>
 <style>
   body {
-    background: #0d1117;
+    background: #0d1117
     color: #e5e7eb;
     font-family: 'Noto Sans JP', sans-serif;
     margin: 0;
@@ -139,9 +139,9 @@
 
 <section id="coach-note">
   <h2>コーチメモ</h2>
-  <p>・トレーニング後の呼吸回復速度をモニタリング。<br>
+  <p>・トレーニング1分後の呼吸回復速度をモニタリングできると良い。<br>
      ・息を通したまま加速できているかを動画で確認。<br>
-     ・Kurodaの課題は“リズムと流れ”を取り戻すこと。<br>
+     ・黒田の課題は“リズムと流れ”を取り戻すこと。<br>
      ・詰める動作ではなく、解放の中で出力する意識を持たせる。</p>
 </section>
 
