--- a/f.html
+++ b/f.html
@@ -89,9 +89,9 @@
 <section id="coach-note">
   <h2>コーチメモ</h2>
   <p>・力の伝達よりも“流れ”を最優先にチェック。<br>
-     ・フォーム動画では出力の途切れを確認し、連続性を育てる。<br>
-     ・Fujiwaraの成長鍵は「滑らかさの中に強さを残す」こと。<br>
-     ・速くなるより、美しく動け。美しさが速さを生む。</p>
+     ・出力の途切れを確認し、連続性を育てる。<br>
+     ・藤原の成長鍵は「滑らかさの中に強さを残す」こと。<br>
+     ・速くなるより、美しく。美しさが速さを生む。</p>
 </section>
 
 <div class="btn-back">
