--- a/m.html
+++ b/m.html
@@ -89,9 +89,9 @@
 <section id="coach-note">
   <h2>コーチメモ</h2>
   <p>・スプリントとMBスローで“切り替え速度”を最優先指標に。<br>
-     ・動作動画では出力開始の遅れをチェック。<br>
-     ・Miyakeの強みは安定。そこに“鋭さ”を足せば完成。<br>
-     ・タイミングを詰めるな、感じて先に動け。</p>
+     ・出力開始の遅れをチェック。<br>
+     ・三宅の強みはフィジカルの安定。そこに“鋭さ”を足せば完成。<br>
+     ・タイミングを詰めず、感じて先に動く。</p>
 </section>
 
 <div class="btn-back">
