--- a/t.html
+++ b/t.html
@@ -95,9 +95,9 @@
 <section id="coach-note">
   <h2>コーチメモ</h2>
   <p>・スロー動作で「骨盤先行→胸遅れ」の時間差を徹底観察。<br>
-     ・投球フォーム動画では骨盤角度と胸郭角度の差を確認。<br>
-     ・Tatsumuraはトルク生成の“遅れ”を覚えれば覚醒する。<br>
-     ・焦るな、ズレを作ってから爆発させろ。</p>
+     ・骨盤角度と胸郭角度の差を確認。<br>
+     ・辰村はトルク生成の“遅れ”を覚えれば覚醒する。<br>
+     ・焦らず、ズレを作ってから爆発させる。</p>
 </section>
 
 <div class="btn-back">
