--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 <section id="summary">
   <h2>チーム全体の傾向</h2>
-  <p>4投手とも基礎的な走力と出力は中〜高水準。<br>
-     ただし全体的に“中強度でまとめる傾向”があり、<strong>瞬発局面での呼吸と出力の同期</strong>に課題が見られる。<br>
-     この冬は、<strong>呼吸で動きを導く</strong>ことと、<strong>骨盤を主導にした出力連鎖</strong>を再教育していく。</p>
+  <p>4投手とも基礎的な走力と出力は中水準。<br>
+     全体的に“中強度でまとめる傾向”があり、<strong>瞬発局面での呼吸と出力の同期</strong>に課題が見られる。<br>
+     この冬は、<strong>呼吸で動きを導く</strong>ことと、<strong>骨盤を主導にした出力連鎖</strong>の再教育が優先。</p>
 </section>
 
 <section id="program">
@@ -82,7 +82,7 @@
   <h2>実施メモ</h2>
   <p>・各セッションは「ウォームアップ→メイン→クールダウン」の流れで統一。<br>
      ・共通メニューのあとに個別補強を20〜30分実施。<br>
-     ・トレッドミルは電動式＝フォーム確認、自走式＝出力評価として使い分ける。<br>
+     ・トレッドミルは電動式＝フォーム確認、自走式＝出力評価として使い分ける。（使用環境による）<br>
      ・疲労指標は心拍・主観RPE・呼吸回数でモニタリング。<br>
      ・目的は“限界で頑張る”ではなく、“力を通す準備を整える”。</p>
 </section>
