--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <section id="summary">
   <h2>チーム全体の傾向</h2>
-  <p>4投手とも基礎的な走力と出力は中水準。<br>
+  <p>4投手の平均として基礎的な走力と出力は中水準。<br>
      全体的に“中強度でまとめる傾向”があり、<strong>瞬発局面での呼吸と出力の同期</strong>に課題が見られる。<br>
      この冬は、<strong>呼吸で動きを導く</strong>ことと、<strong>骨盤を主導にした出力連鎖</strong>の再教育が優先。</p>
 </section>
