--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <p>・各セッションは「ウォームアップ→メイン→クールダウン」の流れで統一。<br>
      ・共通メニューのあとに個別補強を20〜30分実施。<br>
      ・トレッドミルは電動式＝フォーム確認、自走式＝出力評価として使い分ける。（使用環境による）<br>
-     ・疲労指標は心拍・主観RPE・呼吸回数でモニタリング。<br>
+     ・疲労指標は心拍・主観RPE・呼吸回数などでモニタリングできれば理想。<br>
      ・目的は“限界で頑張る”ではなく、“力を通す準備を整える”。</p>
 </section>
 
