--- a/k.html
+++ b/k.html
@@ -89,20 +89,25 @@
 <section id="feedback">
   <h2>フィードバック</h2>
   <h3>良い特徴</h3>
-  <p>・動作の方向性が安定しており、力を真っ直ぐ前へ伝えられる。<br>
+  <p>・動作の方向性が安定しており、力を真っ直ぐ前へ伝えられる要素を持っている。<br>
      ・出力フォームが乱れにくく、スプリント中も軸がぶれない。<br>
      ・重心の通り道が明確で、上半身の力みに左右されにくい。</p>
 
-  <h3>課題（直球）</h3>
+  <h3>課題</h3>
   <p>力を出す瞬間に息を止めてしまい、身体の動きが内側で詰まっている。<br>
      本来は「吸いながら骨盤を前に滑らせる→吐きながら押し出す」流れで、力が全身を通る。<br>
      今は呼吸が止まることで胸と骨盤の動きが切れ、力が脚で止まっている。<br>
      呼吸を“動きのリズム”として使えるようになることが最優先。</p>
+  
+  <h3>心拍傾向</h3>
+    <p>ペース走中の平均HRは<strong>160bpm前後</strong>で、目標（150前後）よりやや高め。<br>
+     → 出力主導で呼吸が浅くなっている。前半は吸気で姿勢を立て、吐気で押し出すテンポを意識。<br>
+     回復1分後のΔHR（低下幅）は<strong>25bpm</strong>が理想。20以下なら疲労蓄積を疑う。</p>
 
   <div class="note">
     <strong>コーチコメント：</strong><br>
     呼吸を通せるようになれば、スプリントも投球も“流れのある出力”に変わる。<br>
-    力むな、詰まるな。息で動きを解放しろ。
+    力まない、詰まらせない。息で動きを解放。
   </div>
 </section>
 
