--- a/t.html
+++ b/t.html
@@ -48,16 +48,21 @@
      ・脚主導の動作で、力の方向をコントロールできる。<br>
      ・呼吸が浅くなっても粘れるタイプで、試合後半にも強い。</p>
 
-  <h3>課題（直球）</h3>
+  <h3>課題</h3>
   <p>骨盤が回る前に胸が先に開いてしまい、ひねりが“逃げている”。<br>
      その結果、力が体の中心で生まれず、上半身で投げてしまう形になる。<br>
      体をひねるのではなく、<strong>「骨盤を先に送り、胸を遅らせる」</strong>感覚を作りたい。<br>
      骨盤のリードが出た瞬間に、力の通り道が一気に開く。</p>
 
+  <h3>心拍傾向</h3>
+ </strong> 平均HR<strong>155bpm</strong>、1分後ΔHR<strong>18bpm</strong>。<br>
+     → 有酸素回復力は中程度。呼吸を整える時間をもう少し確保することでスプリントの再現性が高まる。<br>
+     吸気で立ち上がり、吐気でねじれを戻す呼吸リズムを練習中にも意識。</p> 
+
   <div class="note">
     <strong>コーチコメント：</strong><br>
     腰が先、胸はあと――この順番を掴めば出力は倍になる。<br>
-    回すな、ずらせ。ズレがトルクを生む。
+    回さず、ずらせ。ズレがトルクを生む。
   </div>
 </section>
 
