--- a/f.html
+++ b/f.html
@@ -41,16 +41,21 @@
      ・体幹が強く、姿勢保持能力に優れている。<br>
      ・負荷を恐れず攻めるタイプで、成長速度が速い。</p>
 
-  <h3>課題（直球）</h3>
+  <h3>課題</h3>
   <p>力を出す方向がまだ粗い。出力が点で終わり、動きが“流れ”になっていない。<br>
      力を出したあとも動きを止めず、<strong>「力の尾を引く」</strong>意識を持つこと。<br>
      強く出すよりも、途切れず繋がる方が速くて滑らかだ。<br>
      身体全体がひとつの波として動くように、流れを感じながら加速せよ。</p>
 
+   <h3>心拍傾向</h3>
+ <p> 平均HR<strong>165bpm</strong>、1分後ΔHR<strong>15bpm</strong>。<br>
+     → 出力時の過呼吸傾向。呼吸で“動きを導く”よりも、“止めない”意識を優先。<br>
+     まずは呼吸連動サーキットを基盤に、心拍反応の安定化を優先。</p>
+
   <div class="note">
     <strong>コーチコメント：</strong><br>
     出力はすでに一級。足りないのは“繋げる意識”。<br>
-    力を放つのではなく、流れに乗せて出せ。波のように。
+    力を放つのではなく、流れに乗せて出す。波のように。
   </div>
 </section>
 
