--- a/t.html
+++ b/t.html
@@ -55,7 +55,7 @@
      骨盤のリードが出た瞬間に、力の通り道が一気に開く。</p>
 
   <h3>心拍傾向</h3>
- </strong> 平均HR<strong>155bpm</strong>、1分後ΔHR<strong>18bpm</strong>。<br>
+ <p>平均HR<strong>155bpm</strong>、1分後ΔHR<strong>18bpm</strong>。<br>
      → 有酸素回復力は中程度。呼吸を整える時間をもう少し確保することでスプリントの再現性が高まる。<br>
      吸気で立ち上がり、吐気でねじれを戻す呼吸リズムを練習中にも意識。</p> 
 
