--- a/m.html
+++ b/m.html
@@ -41,16 +41,21 @@
      ・呼吸と動作のテンポが揃っており、リズムに無駄がない。<br>
      ・疲労下でもフォームが崩れにくく、力の流れが途切れない。</p>
 
-  <h3>課題（直球）</h3>
+  <h3>課題</h3>
   <p>動きの“切り替え”が少し遅い。筋力はあるが、スイッチが一拍遅れて入る。<br>
      意識すべきは「強く出す」より「早く通す」。<br>
      反応を速く、力を短く鋭く出す感覚を育てたい。<br>
      その一瞬が速くなれば、全ての数値がもう一段上に跳ねる。</p>
 
+  <h3>心拍傾向</h3>
+  <p>平均HR<strong>145bpm</strong>、1分後ΔHR<strong>35bpm</strong>。<br>
+     → 回復能は非常に高い。高出力トレーニング時に呼吸テンポを乱さない強みを活かし、出力系刺激（RPE8〜9）を週1で導入可能。</p>
+</section>
+
   <div class="note">
     <strong>コーチコメント：</strong><br>
     力はもう十分ある。足りないのは“切り替えの速さ”。<br>
-    反応を制す者が流れを制す。迷わずスイッチを入れろ。
+    反応を制す者が流れを制す。迷わずスイッチがが入る。
   </div>
 </section>
 
